# C335-Assignments

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assignments/files/: find.c
assignments/floating/: float.c
assignments/multibase/: base_calculator.c
assignments/processes/: fork.c
assignments/riscv/: riscv_deserializer.c  riscv_serializer.c
assignments/rpn/: rpn_calculator.c
assignments/threads/: performance.xlsx  threadedFind.c
